update before deploy

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 
 spring.mvc.view.prefix =/WEB-INF/jsp/
 spring.mvc.view.suffix =.jsp
-
+security.basic.enable= false 
+management.security.enabled= false
 
 
 
