--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@
 spring.mvc.view.prefix =/WEB-INF/jsp/
 spring.mvc.view.suffix =.jsp
 security.enable.csrf=false
+spring.security.enabled=false
+management.security.enabled=false
 
 
 
