remove unused ,fix spring boot to 2.2.6 and add swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
-spring.mvc.view.prefix =/WEB-INF/jsp/
-spring.mvc.view.suffix =.jsp
+# spring.mvc.view.prefix =/WEB-INF/jsp/
+#spring.mvc.view.suffix =.jsp
 
 security.enable.csrf=false
 spring.security.enabled=false
